# evkvm

./: Cargo.toml  README.md  default.nix  derivation.nix  keys.md  shell.nix
client/: Cargo.toml
client/src/: main.rs
evkvm/: Cargo.toml
evkvm/src/: client.rs  common.rs  config.rs  main.rs  server.rs
example/: config.toml  evkvm.service
input/: Cargo.toml  build.rs
input/src/: event.rs  lib.rs  linux.rs
input/src/event/: key.rs
input/src/linux/: device_id.rs  event.rs  event_manager.rs  event_manager.rs.old  event_reader.rs  event_writer.rs
input/src/linux/event/: button.rs  key.rs
net/: Cargo.toml
net/src/: lib.rs
package/arch/: PKGBUILD  evkvm.conf  evkvm.install
server/: Cargo.toml
server/src/: config.rs  main.rs
