[package]
name = "input"
version = "0.2.0"
authors = ["Evan Goode <mail@evangoo.de>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.9.2"
libc = "0.2.77"
tokio = { version = "1.0.1", features = ["fs", "io-util", "net", "sync", "rt", "time"] }

[build-dependencies]
bindgen = "0.55.1"
pkg-config = "0.3.19"
