[package]
name = "net"
version = "0.2.0"
authors = ["Evan Goode <mail@evangoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = { path = "../input" }
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
tokio = { version = "1.0.1", features = ["io-util"] }
