[package]
name = "server"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
input = { path = "../input" }
net = { path = "../net" }
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
structopt = "0.3.20"
log = "0.4.11"
env_logger = "0.8.1"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.0"
rcgen = "0.9.2"
anyhow = "1.0.33"
ring = "0.16.20"
hex = "0.4"
futures = "0.3"
